--- a/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
+++ b/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
@@ -39,7 +39,7 @@
   <div class="mb-2">
     <label class="form-label">Edited:</label>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" formControlName="isEdited" id="isEditedCheckbox" [disabled]="true">
+      <input class="form-check-input" type="checkbox" formControlName="isEdited" id="isEditedCheckbox">
       <label class="form-check-label" for="isEditedCheckbox">
   {{ photoForm.get('isEdited')?.value ? 'Yes' : 'No' }}
   </label>
