--- a/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
+++ b/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
@@ -1,7 +1,15 @@
 <!-- src/app/feature/photos/photo/photo.component.html -->
 
 <div class="container mt-5">
-  @if (photoForm) {
+  @if (loading) {
+  <div class="text-center my-5">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+  } @else if (error) {
+  <div class="alert alert-danger text-center mt-4">{{ error }}</div>
+  } @else if (photoForm) {
   <div class="row">
     <div class="col-md-6">
       <div class="card mb-4">
@@ -15,13 +23,13 @@
         <div class="card-header text-center">
           <i class="fas fa-image fa-3x mb-2"></i><br/>
           <strong>{{ photoForm.get('photoName')?.value }}</strong>
-          </div>
+        </div>
 
-          <div class="card-body">
-            <div class="mb-2">
-              <label class="form-label">Name:</label>
-              <input type="text" class="form-control" formControlName="photoName"/>
-              @if (photoForm.get('photoName')?.invalid && photoForm.get('photoName')?.touched) {
+        <div class="card-body">
+          <div class="mb-2">
+            <label class="form-label">Name:</label>
+            <input type="text" class="form-control" formControlName="photoName"/>
+            @if (photoForm.get('photoName')?.invalid && photoForm.get('photoName')?.touched) {
   <div class="text-danger small">Name is required.</div>
   }
   </div>
@@ -48,20 +56,26 @@
 </div>
 
 <div class="card-footer d-flex justify-content-between">
+<div class="btn-group">
 @if (loggedUser?.role == Role.ADMIN) {
   <button (click)="deletePhoto()" class="btn btn-outline-danger" type="button">
     <i class="fas fa-trash"></i> Delete
   </button>
   }
-  <button (click)="toggleEdit()" [disabled]="photoForm.invalid" class="btn btn-outline-primary" type="button">
-    <i [ngClass]="editMode ? 'fa-save' : 'fa-pen'" class="fas"></i> {{ editMode ? 'Save' : 'Edit' }}
-  </button>
   </div>
+
+  <div class="btn-group">
+    <button (click)="editPhoto()" class="btn btn-outline-success" type="button">
+      <i class="fas fa-magic"></i> Edit Photo
+    </button>
+    <button (click)="toggleEdit()" [disabled]="photoForm.invalid" class="btn btn-outline-primary" type="button">
+      <i [ngClass]="editMode ? 'fa-save' : 'fa-pen'" class="fas"></i> {{ editMode ? 'Save' : 'Edit Info' }}
+  </button>
+</div>
+</div>
 </form>
 </div>
 </div>
-  } @else if (error) {
-  <div class="alert alert-danger text-center mt-4">{{ error }}</div>
   } @else {
   <div class="alert alert-info text-center mt-4">Loading photo details...</div>
   }
