--- a/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
+++ b/photo-mgmt-frontend/src/app/feature/photos/photo/photo.component.html
@@ -1,5 +1,3 @@
-<!-- src/app/feature/photos/photo/photo.component.html -->
-
 <div class="container mt-5">
   @if (loading) {
   <div class="text-center my-5">
@@ -47,7 +45,7 @@
   <div class="mb-2">
     <label class="form-label">Edited:</label>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" formControlName="isEdited" id="isEditedCheckbox">
+      <input class="form-check-input" type="checkbox" formControlName="isEdited" id="isEditedCheckbox" [disabled]="true">
       <label class="form-check-label" for="isEditedCheckbox">
   {{ photoForm.get('isEdited')?.value ? 'Yes' : 'No' }}
   </label>
@@ -68,7 +66,7 @@
     <button (click)="editPhoto()" class="btn btn-outline-success" type="button">
       <i class="fas fa-magic"></i> Edit Photo
     </button>
-    <button (click)="toggleEdit()" [disabled]="photoForm.invalid" class="btn btn-outline-primary" type="button">
+    <button (click)="toggleEdit()" [disabled]="photoForm.invalid && editMode" class="btn btn-outline-primary" type="button">
       <i [ngClass]="editMode ? 'fa-save' : 'fa-pen'" class="fas"></i> {{ editMode ? 'Save' : 'Edit Info' }}
   </button>
 </div>
