--- a/photo-mgmt-frontend/src/app/feature/photo-edits/photo-edit/photo-edit.component.html
+++ b/photo-mgmt-frontend/src/app/feature/photo-edits/photo-edit/photo-edit.component.html
@@ -6,10 +6,16 @@
       <i class="fas fa-magic me-2"></i>
       Enhanced Photo Editor
     </h2>
-    <button class="btn btn-outline-secondary" (click)="cancel()">
-      <i class="fas fa-times"></i> Cancel
-    </button>
+    <div class="btn-group">
+      <button class="btn btn-outline-info" (click)="showVersionHistory()">
+        <i class="fas fa-history"></i> Version History
+      </button>
+      <button class="btn btn-outline-secondary" (click)="cancel()">
+        <i class="fas fa-times"></i> Cancel
+      </button>
+    </div>
   </div>
+
 
   @if (loading) {
   <div class="text-center my-5">
@@ -411,4 +417,12 @@
 </div>
 </div>
   }
+
+  <app-photo-version-history
+    [photoId]="photoId"
+    [show]="showVersionHistoryModal"
+    (close)="showVersionHistoryModal = false"
+    (versionReverted)="onVersionReverted($event)">
+  </app-photo-version-history>
+
 </div>
