bugfix for locking target album at photo upload

--- a/photo-mgmt-frontend/src/app/feature/photos/photos/photos.component.html
+++ b/photo-mgmt-frontend/src/app/feature/photos/photos/photos.component.html
@@ -1,7 +1,7 @@
 <div class="container py-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h2>Photos</h2>
-    <button class="btn btn-primary" [routerLink]="['upload']">
+    <button class="btn btn-primary" (click)="navigateToUpload()">
       <i class="fas fa-plus"></i> Upload New Photo
     </button>
   </div>
